examples/test/testpolicy18928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18928
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key20: value20
      key11: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value3
          key18: value35
      podSelector:
        matchLabels:
          key12: value35
